[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Scenes/VisualNovel/Dialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Scripts/Stages/Actor.gd" type="Script" id=2]

[node name="Actor" type="Node2D"]
script = ExtResource( 2 )
actor_name = "Actor"

[node name="Pose" type="AnimatedSprite" parent="."]
position = Vector2( 960, 630 )
scale = Vector2( 0.7, 0.7 )
z_index = -1
z_as_relative = false

[node name="Dialog" parent="." instance=ExtResource( 1 )]

[node name="StagePositionTween" type="Tween" parent="."]

[node name="ActorSFX" type="AudioStreamPlayer" parent="."]

[connection signal="ready_for_new_dialog" from="Dialog" to="." method="_on_Dialog_ready_for_new_dialog"]
[connection signal="tween_all_completed" from="StagePositionTween" to="." method="_on_StagePositionTween_tween_all_completed"]
